--- a/index.html
+++ b/index.html
@@ -59,6 +59,136 @@
             </div>
         </section>
         <!-- Contenido principal -->
+        <section class="about-minimal">
+            <div class="about-text">
+                <h2>Sobre Nosotros</h2>
+                <h3 class="about-subtitle">Nuestro Compromiso</h3>
+                <p>Somos una empresa dedicada a brindar soluciones innovadoras y eficientes para nuestros clientes. Nuestro equipo está comprometido con la excelencia y la mejora continua.</p>
+            </div>
+            <div class="about-image">
+                <img src="images/about-placeholder.png" alt="Sobre nosotros" />
+            </div>
+        </section>
+        <!-- Fin sección minimalista -->
+
+        <!-- Sección Servicios -->
+        <section class="servicios-section">
+            <h2 class="servicios-title">Servicios</h2>
+            <div class="servicios-grid">
+                <div class="servicio servicio-text">
+                    <h3>Consultoría Creativa</h3>
+                    <p>Ofrecemos asesoría personalizada para potenciar tus ideas y proyectos.</p>
+                </div>
+                <div class="servicio servicio-img">
+                    <img src="images/toychiquito.jpg" alt="Servicio 1">
+                </div>
+                <div class="servicio servicio-img servicio-img-wide">
+                    <img src="images/toychiquito.jpg" alt="Servicio 2">
+                </div>
+                <div class="servicio servicio-text">
+                    <h3>Desarrollo de Productos</h3>
+                    <p>Desde el concepto hasta la producción, te acompañamos en todo el proceso.</p>
+                </div>
+                <div class="servicio servicio-text">
+                    <h3>Marketing Digital</h3>
+                    <p>Impulsa tu marca con estrategias digitales efectivas y creativas.</p>
+                </div>
+                <div class="servicio servicio-img">
+                    <img src="images/toychiquito.jpg" alt="Servicio 3">
+                </div>
+                <div class="servicio servicio-img">
+                    <img src="images/toychiquito.jpg" alt="Servicio 4">
+                </div>
+                <div class="servicio servicio-text">
+                    <h3>Diseño Gráfico</h3>
+                    <p>Soluciones visuales atractivas y funcionales para tu empresa.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Fin sección Servicios -->
+
+        <!-- Sección Nuestro Orgullo -->
+        <section class="orgullo-section">
+            <h2 class="orgullo-title">Nuestro Orgullo</h2>
+            <p class="orgullo-intro">Algunos de los proyectos que hemos realizado con pasión y dedicación.</p>
+            <div class="orgullo-carousel">
+                <button class="orgullo-arrow left" aria-label="Anterior">&#8592;</button>
+                <div class="orgullo-slide active">
+                    <div class="orgullo-img-container">
+                        <div class="orgullo-desc">
+                            <h3>Toy Chiquito</h3>
+                            <p>Proyecto de juguetería creativa para niños, enfocado en el aprendizaje y la diversión.</p>
+                        </div>
+                        <img src="images/toychiquito.jpg" alt="Proyecto Toy Chiquito">
+                    </div>
+                </div>
+                <!-- Puedes duplicar .orgullo-slide para más proyectos -->
+                <button class="orgullo-arrow right" aria-label="Siguiente">&#8594;</button>
+            </div>
+        </section>
+        <!-- Fin sección Nuestro Orgullo -->
+
+        <!-- Sección Nuestro Objetivo -->
+        <section class="objetivo-section">
+            <h2 class="objetivo-title">Nuestro Objetivo</h2>
+            <div class="objetivo-container">
+                <div class="objetivo-box vision">
+                    <h3>Visión</h3>
+                    <p>Ser líderes en innovación y creatividad, inspirando a otros a transformar el mundo.</p>
+                </div>
+                <div class="objetivo-center">
+                    <img src="images/toychiquito.jpg" alt="Objetivo" class="objetivo-img">
+                    <svg class="objetivo-arrow vision-arrow" width="120" height="80" viewBox="0 0 120 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M120 80 Q60 0 0 40" stroke="#22479D" stroke-width="3" fill="none" marker-end="url(#arrowhead)"/>
+                        <defs>
+                            <marker id="arrowhead" markerWidth="8" markerHeight="8" refX="4" refY="4" orient="auto" markerUnits="strokeWidth">
+                                <polygon points="0 0, 8 4, 0 8" fill="#22479D" />
+                            </marker>
+                        </defs>
+                    </svg>
+                    <svg class="objetivo-arrow mision-arrow" width="120" height="80" viewBox="0 0 120 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0 Q60 80 120 40" stroke="#22479D" stroke-width="3" fill="none" marker-end="url(#arrowhead2)"/>
+                        <defs>
+                            <marker id="arrowhead2" markerWidth="8" markerHeight="8" refX="4" refY="4" orient="auto" markerUnits="strokeWidth">
+                                <polygon points="0 0, 8 4, 0 8" fill="#22479D" />
+                            </marker>
+                        </defs>
+                    </svg>
+                </div>
+                <div class="objetivo-box mision">
+                    <h3>Misión</h3>
+                    <p>Ofrecer soluciones que generen valor y crecimiento sostenible para nuestros clientes y la sociedad.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Fin sección Nuestro Objetivo -->
+
+        <!-- Sección Nuestros Valores -->
+        <section class="valores-section">
+            <h2 class="valores-title">Nuestros valores</h2>
+            <div class="valores-banner"></div>
+            <div class="valores-grid">
+                <div class="valor-item">
+                    <div class="valor-icon">
+                        <img src="images/toychiquito.jpg" alt="Icono Valor 1">
+                    </div>
+                    <div class="valor-text">Compromiso<br><span>Siempre damos lo mejor en cada proyecto.</span></div>
+                </div>
+                <div class="valor-item">
+                    <div class="valor-icon">
+                        <img src="images/toychiquito.jpg" alt="Icono Valor 2">
+                    </div>
+                    <div class="valor-text">Innovación<br><span>Buscamos nuevas ideas y soluciones.</span></div>
+                </div>
+                <div class="valor-item">
+                    <div class="valor-icon">
+                        <img src="images/toychiquito.jpg" alt="Icono Valor 3">
+                    </div>
+                    <div class="valor-text">Trabajo en equipo<br><span>Colaboramos para lograr grandes resultados.</span></div>
+                </div>
+            </div>
+        </section>
+        <!-- Fin sección Nuestros Valores -->
     </main>
 
     <footer>
