terminando esqueleto de la pagina web

--- a/index.html
+++ b/index.html
@@ -189,10 +189,86 @@
             </div>
         </section>
         <!-- Fin sección Nuestros Valores -->
+
+        <section class="opiniones-section">
+            <h2 class="opiniones-title">Opiniones</h2>
+            <div class="opiniones-carrusel">
+                <button class="opiniones-arrow left" aria-label="Anterior">&#8592;</button>
+                <div class="opiniones-slide active">
+                    <img class="opinion-avatar" src="images/toychiquito.jpg" alt="Foto de perfil">
+                    <p class="opinion-text">"Excelente servicio y atención personalizada. ¡Muy recomendados!"</p>
+                    <span class="opinion-author">- Juan Pérez</span>
+                </div>
+                <div class="opiniones-slide">
+                    <img class="opinion-avatar" src="images/toychiquito.jpg" alt="Foto de perfil">
+                    <p class="opinion-text">"El equipo demostró gran profesionalismo y compromiso en todo momento."</p>
+                    <span class="opinion-author">- María López</span>
+                </div>
+                <div class="opiniones-slide">
+                    <img class="opinion-avatar" src="images/toychiquito.jpg" alt="Foto de perfil">
+                    <p class="opinion-text">"Soluciones innovadoras y resultados sobresalientes. Volvería a elegirlos."</p>
+                    <span class="opinion-author">- Carlos Ramírez</span>
+                </div>
+                <button class="opiniones-arrow right" aria-label="Siguiente">&#8594;</button>
+            </div>
+        </section>
+        <!-- Sección de Contacto -->
+        <section class="contacto-section" id="contacto">
+            <h2 class="contacto-title">CONTACTANOS</h2>
+            <p class="contacto-subtitle">"¡Contáctanos y hagamos realidad tus proyectos de construcción! Estamos aquí para escucharte y brindarte un servicio personalizado de calidad."</p>
+            <div class="contacto-container">
+                <div class="contacto-info">
+                    <div class="contacto-info-item">
+                        <div class="contacto-icon contacto-icon-ubicacion"></div>
+                        <div>
+                            <strong>Ubicacion:</strong><br>
+                            9 Calle Poniente casa 57, Santa Tecla,<br>La Libertad
+                        </div>
+                    </div>
+                    <div class="contacto-info-item">
+                        <div class="contacto-icon contacto-icon-correo"></div>
+                        <div>
+                            <strong>Correo:</strong><br>
+                            info@convases.com
+                        </div>
+                    </div>
+                    <div class="contacto-info-item">
+                        <div class="contacto-icon contacto-icon-telefono"></div>
+                        <div>
+                            <strong>Telefono:</strong><br>
+                            +503 2229 8000
+                        </div>
+                    </div>
+                </div>
+                <form class="contacto-form">
+                    <div class="contacto-form-row">
+                        <input type="text" placeholder="Nombre" required>
+                        <input type="text" placeholder="Apellido" required>
+                    </div>
+                    <div class="contacto-form-row">
+                        <input type="text" placeholder="Telefono" required>
+                        <input type="email" placeholder="Correo" required>
+                    </div>
+                    <input type="text" placeholder="Asunto" class="contacto-form-asunto" required>
+                    <textarea placeholder="Mensaje" rows="5" required></textarea>
+                    <button type="submit" class="contacto-form-btn">ENVIAR MENSAJE</button>
+                </form>
+            </div>
+        </section>
+        <!-- Fin sección de Contacto -->
     </main>
 
-    <footer>
-        <!-- Pie de página -->
+    <footer class="footer">
+        <div class="footer-content">
+            <img src="images/toychiquito.jpg" alt="Logo Convases" class="footer-logo">
+            <div class="footer-text">
+                <strong>Convases</strong><br>
+                Empresa constructora de obra de ingeniería civil.
+            </div>
+        </div>
+        <div class="footer-copy">
+            © Copyright <strong>Convases</strong>. All Rights Reserved
+        </div>
     </footer>
 
     <script src="script.js"></script>
