--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <img src="images/LogoHB.png" alt="The Fuentes Corp Logo" class="hero-logo">
+                <img src="images/LogoLight.png" alt="The Fuentes Corp Logo" class="hero-logo">
                 <h1>Creciendo juntos</h1>
                 <button class="btn cta-button">Conoce más</button>
             </div>
@@ -66,7 +66,7 @@
                 <p>Somos una empresa dedicada a brindar soluciones innovadoras y eficientes para nuestros clientes. Nuestro equipo está comprometido con la excelencia y la mejora continua.</p>
             </div>
             <div class="about-image">
-                <img src="images/about-placeholder.png" alt="Sobre nosotros" />
+                <img src="images/equipo.jpg" alt="Sobre nosotros" />
             </div>
         </section>
         <!-- Fin sección minimalista -->
@@ -75,32 +75,32 @@
         <section class="servicios-section">
             <h2 class="servicios-title">Servicios</h2>
             <div class="servicios-grid">
-                <div class="servicio servicio-text">
-                    <h3>Consultoría Creativa</h3>
+                <div class="servicio servicio-text servicioA">
+                    <h3>Planificacion</h3>
                     <p>Ofrecemos asesoría personalizada para potenciar tus ideas y proyectos.</p>
                 </div>
-                <div class="servicio servicio-img">
-                    <img src="images/toychiquito.jpg" alt="Servicio 1">
+                <div class="servicio servicio-img ">
+                    <img src="images/planificacion.png" alt="Servicio 1">
                 </div>
                 <div class="servicio servicio-img servicio-img-wide">
-                    <img src="images/toychiquito.jpg" alt="Servicio 2">
+                    <img src="images/diseño.jpg" alt="Servicio 2">
                 </div>
-                <div class="servicio servicio-text">
-                    <h3>Desarrollo de Productos</h3>
+                <div class="servicio servicio-text servicioB">
+                    <h3>Diseño</h3>
                     <p>Desde el concepto hasta la producción, te acompañamos en todo el proceso.</p>
                 </div>
-                <div class="servicio servicio-text">
-                    <h3>Marketing Digital</h3>
+                <div class="servicio servicio-text servicioA">
+                    <h3>Construccion</h3>
                     <p>Impulsa tu marca con estrategias digitales efectivas y creativas.</p>
                 </div>
                 <div class="servicio servicio-img">
-                    <img src="images/toychiquito.jpg" alt="Servicio 3">
+                    <img src="images/construccion.jpg" alt="Servicio 3">
                 </div>
                 <div class="servicio servicio-img">
-                    <img src="images/toychiquito.jpg" alt="Servicio 4">
+                    <img src="images/remodelacion.jpg" alt="Servicio 4">
                 </div>
-                <div class="servicio servicio-text">
-                    <h3>Diseño Gráfico</h3>
+                <div class="servicio servicio-text servicioB">
+                    <h3>Remodelacion</h3>
                     <p>Soluciones visuales atractivas y funcionales para tu empresa.</p>
                 </div>
             </div>
@@ -131,30 +131,12 @@
         <!-- Sección Nuestro Objetivo -->
         <section class="objetivo-section">
             <h2 class="objetivo-title">Nuestro Objetivo</h2>
-            <div class="objetivo-container">
+            <div class="objetivo-container objetivo-dos-columnas">
                 <div class="objetivo-box vision">
                     <h3>Visión</h3>
                     <p>Ser líderes en innovación y creatividad, inspirando a otros a transformar el mundo.</p>
                 </div>
-                <div class="objetivo-center">
-                    <img src="images/toychiquito.jpg" alt="Objetivo" class="objetivo-img">
-                    <svg class="objetivo-arrow vision-arrow" width="120" height="80" viewBox="0 0 120 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M120 80 Q60 0 0 40" stroke="#22479D" stroke-width="3" fill="none" marker-end="url(#arrowhead)"/>
-                        <defs>
-                            <marker id="arrowhead" markerWidth="8" markerHeight="8" refX="4" refY="4" orient="auto" markerUnits="strokeWidth">
-                                <polygon points="0 0, 8 4, 0 8" fill="#22479D" />
-                            </marker>
-                        </defs>
-                    </svg>
-                    <svg class="objetivo-arrow mision-arrow" width="120" height="80" viewBox="0 0 120 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0 Q60 80 120 40" stroke="#22479D" stroke-width="3" fill="none" marker-end="url(#arrowhead2)"/>
-                        <defs>
-                            <marker id="arrowhead2" markerWidth="8" markerHeight="8" refX="4" refY="4" orient="auto" markerUnits="strokeWidth">
-                                <polygon points="0 0, 8 4, 0 8" fill="#22479D" />
-                            </marker>
-                        </defs>
-                    </svg>
-                </div>
+                <div class="objetivo-divisor"></div>
                 <div class="objetivo-box mision">
                     <h3>Misión</h3>
                     <p>Ofrecer soluciones que generen valor y crecimiento sostenible para nuestros clientes y la sociedad.</p>
