continuando con estilos

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                     <h3>Planificacion</h3>
                     <p>Ofrecemos asesoría personalizada para potenciar tus ideas y proyectos.</p>
                 </div>
-                <div class="servicio servicio-img ">
+                <div class="servicio servicio-img imgA ">
                     <img src="images/planificacion.png" alt="Servicio 1">
                 </div>
-                <div class="servicio servicio-img servicio-img-wide">
+                <div class="servicio servicio-img servicio-img-wide imgB">
                     <img src="images/diseño.jpg" alt="Servicio 2">
                 </div>
                 <div class="servicio servicio-text servicioB">
@@ -93,10 +93,10 @@
                     <h3>Construccion</h3>
                     <p>Impulsa tu marca con estrategias digitales efectivas y creativas.</p>
                 </div>
-                <div class="servicio servicio-img">
-                    <img src="images/construccion.jpg" alt="Servicio 3">
+                <div class="servicio servicio-img imgA">
+                    <img src="images/construccion.jpg " alt="Servicio 3">
                 </div>
-                <div class="servicio servicio-img">
+                <div class="servicio servicio-img imgB">
                     <img src="images/remodelacion.jpg" alt="Servicio 4">
                 </div>
                 <div class="servicio servicio-text servicioB">
@@ -112,7 +112,7 @@
             <h2 class="orgullo-title">Nuestro Orgullo</h2>
             <p class="orgullo-intro">Algunos de los proyectos que hemos realizado con pasión y dedicación.</p>
             <div class="orgullo-carousel">
-                <button class="orgullo-arrow left" aria-label="Anterior">&#8592;</button>
+                <button class="orgullo-arrow left" aria-label="Anterior"><</button>
                 <div class="orgullo-slide active">
                     <div class="orgullo-img-container">
                         <div class="orgullo-desc">
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <!-- Puedes duplicar .orgullo-slide para más proyectos -->
-                <button class="orgullo-arrow right" aria-label="Siguiente">&#8594;</button>
+                <button class="orgullo-arrow right" aria-label="Siguiente">></button>
             </div>
         </section>
         <!-- Fin sección Nuestro Orgullo -->
@@ -132,15 +132,17 @@
         <section class="objetivo-section">
             <h2 class="objetivo-title">Nuestro Objetivo</h2>
             <div class="objetivo-container objetivo-dos-columnas">
-                <div class="objetivo-box vision">
-                    <h3>Visión</h3>
-                    <p>Ser líderes en innovación y creatividad, inspirando a otros a transformar el mundo.</p>
-                </div>
-                <div class="objetivo-divisor"></div>
                 <div class="objetivo-box mision">
                     <h3>Misión</h3>
                     <p>Ofrecer soluciones que generen valor y crecimiento sostenible para nuestros clientes y la sociedad.</p>
                 </div>
+                <div class="objetivo-divisor"></div>
+                <div class="objetivo-box vision">
+                    <h3>Visión</h3>
+                    <p>Ser líderes en innovación y creatividad, inspirando a otros a transformar el mundo.</p>
+                </div>
+                
+                
             </div>
         </section>
         <!-- Fin sección Nuestro Objetivo -->
