terminando seccion sobre nosotros

--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
         </section>
         <!-- Contenido principal -->
         <section class="about-minimal">
+            <div class="about-image">
+                <img src="images/equipo.jpg" alt="Sobre nosotros" />
+            </div>
             <div class="about-text">
                 <h2>Sobre Nosotros</h2>
                 <h3 class="about-subtitle">Nuestro Compromiso</h3>
-                <p>Somos una empresa dedicada a brindar soluciones innovadoras y eficientes para nuestros clientes. Nuestro equipo está comprometido con la excelencia y la mejora continua.</p>
-            </div>
-            <div class="about-image">
-                <img src="images/equipo.jpg" alt="Sobre nosotros" />
+                <p>Somos una <strong>empresa comprometida</strong> con brindar <strong>soluciones innovadoras</strong> y <strong>eficientes</strong> que se adapten a las necesidades de nuestros clientes.
+                    Nos enfocamos en ofrecer un servicio <strong>personalizado</strong>, utilizando herramientas de última tecnología y un enfoque centrado en resultados.
+                    Creemos en construir relaciones basadas en la <strong>confianza</strong>, la <strong>calidad</strong> y la <strong>satisfacción</strong> del cliente.</p>
             </div>
         </section>
         <!-- Fin sección minimalista -->
