terminando seccion Servicios

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="servicios-grid">
                 <div class="servicio servicio-text servicioA">
                     <h3>Planificacion</h3>
-                    <p>Ofrecemos asesoría personalizada para potenciar tus ideas y proyectos.</p>
+                    <p> Te ayudamos a conceptualizar y estructurar tu proyecto desde cero, garantizando una hoja de ruta clara y eficiente.</p>
                 </div>
                 <div class="servicio servicio-img imgA ">
                     <img src="images/planificacion.png" alt="Servicio 1">
@@ -90,11 +90,11 @@
                 </div>
                 <div class="servicio servicio-text servicioB">
                     <h3>Diseño</h3>
-                    <p>Desde el concepto hasta la producción, te acompañamos en todo el proceso.</p>
+                    <p>Convertimos tus ideas en planos innovadores y estéticos, creando espacios funcionales y visualmente atractivos que superen tus expectativas.</p>
                 </div>
                 <div class="servicio servicio-text servicioA">
                     <h3>Construccion</h3>
-                    <p>Impulsa tu marca con estrategias digitales efectivas y creativas.</p>
+                    <p>Ejecutamos tu proyecto con calidad y precisión, construyendo estructuras sólidas y duraderas que cumplen con los más altos estándares.</p>
                 </div>
                 <div class="servicio servicio-img imgA">
                     <img src="images/construccion.jpg " alt="Servicio 3">
@@ -104,7 +104,7 @@
                 </div>
                 <div class="servicio servicio-text servicioB">
                     <h3>Remodelacion</h3>
-                    <p>Soluciones visuales atractivas y funcionales para tu empresa.</p>
+                    <p>Transformamos y modernizamos tus espacios existentes, aportando frescura, funcionalidad y valor a tu propiedad.</p>
                 </div>
             </div>
         </section>
