--- a/index.html
+++ b/index.html
@@ -136,13 +136,14 @@
             <h2 class="objetivo-title">Nuestro Objetivo</h2>
             <div class="objetivo-container objetivo-dos-columnas">
                 <div class="objetivo-box mision">
-                    <h3>Misión</h3>
-                    <p>Ofrecer soluciones que generen valor y crecimiento sostenible para nuestros clientes y la sociedad.</p>
+                    <h3>Mision</h3>
+                    <p>Brindar servicios de ingeniería, arquitectura y construcción de infraestructura que se distingan por su calidad, puntualidad y eficiencia. Nos comprometemos a enfrentar cada proyecto con profesionalismo, respeto a los plazos y los costos establecidos, siempre ofreciendo soluciones innovadoras que respondan a las necesidades y desafíos de nuestros clientes, garantizando su satisfacción y contribuyendo al progreso y bienestar de las comunidades a las que servimos.
+                    </p>
                 </div>
                 <div class="objetivo-divisor"></div>
                 <div class="objetivo-box vision">
                     <h3>Visión</h3>
-                    <p>Ser líderes en innovación y creatividad, inspirando a otros a transformar el mundo.</p>
+                    <p>Ser una empresa constructora de referencia a nivel nacional e internacional, reconocida por su compromiso con la calidad, la innovación y la sostenibilidad. Aspiramos a transformar infraestructuras que mejoren la vida de las personas, contribuyendo al progreso social y económico, mediante procesos eficientes, tecnología de vanguardia y un equipo humano altamente calificado y comprometido con la excelencia.</p>
                 </div>
                 
                 
