--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
         <section class="about-minimal">
             
             <div class="about-text">
-                <h2>Sobre Nosotros</h2>
+                <h2>Quienes somos?</h2>
                 <h3 class="about-subtitle">Nuestro Compromiso</h3>
-                <p>Somos una <strong>empresa comprometida</strong> con brindar <strong>soluciones innovadoras</strong> y <strong>eficientes</strong> que se adapten a las necesidades de nuestros clientes.
-                    Nos enfocamos en ofrecer un servicio <strong>personalizado</strong>, utilizando herramientas de última tecnología y un enfoque centrado en resultados.
-                    Creemos en construir relaciones basadas en la <strong>confianza</strong>, la <strong>calidad</strong> y la <strong>satisfacción</strong> del cliente.</p>
+                <p>Somos una empresa en expansion, dedicada a la construccion de obras de ingenieria civil, tanto en el sector publico como en el privado, nuestro mayor fuerte son la construccion de carreteras y puentes, nos caracterizamos por brindar a jóvenes ingenieros residentes que buscan encontrar su primera oportunidad laboral, para formar su camino hacia la excelencia profesional</p>
             </div>
             <div class="about-image">
                 <img src="images/equipo.jpg" alt="Sobre nosotros" />
@@ -154,25 +152,61 @@
         <!-- Sección Nuestros Valores -->
         <section class="valores-section">
             <h2 class="valores-title">Nuestros valores</h2>
-            <div class="valores-banner"></div>
-            <div class="valores-grid">
-                <div class="valor-item">
-                    <div class="valor-icon">
-                        <img src="images/toychiquito.jpg" alt="Icono Valor 1">
+            <div class="valores-flex">
+                <div class="valores-accordion">
+                    <div class="valor-menu">
+                        <div class="valor-header">
+                            <span class="valor-icon"><img src="images/icon_planificacion.png" alt="Planificación"></span>
+                            <span class="valor-title">Planificación</span>
+                            <span class="valor-arrow">&#9660;</span>
+                        </div>
+                        <div class="valor-desc">
+                            Estructuramos cada proyecto con una hoja de ruta clara y eficiente, anticipando riesgos y optimizando recursos.
+                        </div>
                     </div>
-                    <div class="valor-text">Compromiso<br><span>Siempre damos lo mejor en cada proyecto.</span></div>
+                    <div class="valor-menu">
+                        <div class="valor-header">
+                            <span class="valor-icon"><img src="images/icon_disenio.webp" alt="Diseño"></span>
+                            <span class="valor-title">Diseño</span>
+                            <span class="valor-arrow">&#9660;</span>
+                        </div>
+                        <div class="valor-desc">
+                            Creamos soluciones innovadoras y funcionales, cuidando la estética y la viabilidad técnica de cada obra.
+                        </div>
+                    </div>
+                    <div class="valor-menu">
+                        <div class="valor-header">
+                            <span class="valor-icon"><img src="images/icon_construccion.png" alt="Construcción"></span>
+                            <span class="valor-title">Construcción</span>
+                            <span class="valor-arrow">&#9660;</span>
+                        </div>
+                        <div class="valor-desc">
+                            Ejecutamos con calidad y precisión, cumpliendo los más altos estándares y garantizando resultados duraderos.
+                        </div>
+                    </div>
+                    <div class="valor-menu">
+                        <div class="valor-header">
+                            <span class="valor-icon"><img src="images/icon_remodelacion.png" alt="Remodelación"></span>
+                            <span class="valor-title">Remodelación</span>
+                            <span class="valor-arrow">&#9660;</span>
+                        </div>
+                        <div class="valor-desc">
+                            Transformamos espacios existentes, aportando valor, funcionalidad y modernidad a cada proyecto.
+                        </div>
+                    </div>
+                    <div class="valor-menu">
+                        <div class="valor-header">
+                            <span class="valor-icon"><img src="images/toychiquito.jpg" alt="Compromiso"></span>
+                            <span class="valor-title">Compromiso</span>
+                            <span class="valor-arrow">&#9660;</span>
+                        </div>
+                        <div class="valor-desc">
+                            Nos dedicamos con pasión y responsabilidad, cumpliendo siempre con nuestros clientes y la sociedad.
+                        </div>
+                    </div>
                 </div>
-                <div class="valor-item">
-                    <div class="valor-icon">
-                        <img src="images/toychiquito.jpg" alt="Icono Valor 2">
-                    </div>
-                    <div class="valor-text">Innovación<br><span>Buscamos nuevas ideas y soluciones.</span></div>
-                </div>
-                <div class="valor-item">
-                    <div class="valor-icon">
-                        <img src="images/toychiquito.jpg" alt="Icono Valor 3">
-                    </div>
-                    <div class="valor-text">Trabajo en equipo<br><span>Colaboramos para lograr grandes resultados.</span></div>
+                <div class="valores-img-container">
+                    <img id="valores-img" src="images/planificacion.png" alt="Valor" />
                 </div>
             </div>
         </section>
