continuando con seccion valores

--- a/index.html
+++ b/index.html
@@ -152,61 +152,41 @@
         <!-- Sección Nuestros Valores -->
         <section class="valores-section">
             <h2 class="valores-title">Nuestros valores</h2>
-            <div class="valores-flex">
-                <div class="valores-accordion">
-                    <div class="valor-menu">
-                        <div class="valor-header">
-                            <span class="valor-icon"><img src="images/icon_planificacion.png" alt="Planificación"></span>
-                            <span class="valor-title">Planificación</span>
-                            <span class="valor-arrow">&#9660;</span>
-                        </div>
-                        <div class="valor-desc">
-                            Estructuramos cada proyecto con una hoja de ruta clara y eficiente, anticipando riesgos y optimizando recursos.
-                        </div>
-                    </div>
-                    <div class="valor-menu">
-                        <div class="valor-header">
-                            <span class="valor-icon"><img src="images/icon_disenio.webp" alt="Diseño"></span>
-                            <span class="valor-title">Diseño</span>
-                            <span class="valor-arrow">&#9660;</span>
-                        </div>
-                        <div class="valor-desc">
-                            Creamos soluciones innovadoras y funcionales, cuidando la estética y la viabilidad técnica de cada obra.
-                        </div>
-                    </div>
-                    <div class="valor-menu">
-                        <div class="valor-header">
-                            <span class="valor-icon"><img src="images/icon_construccion.png" alt="Construcción"></span>
-                            <span class="valor-title">Construcción</span>
-                            <span class="valor-arrow">&#9660;</span>
-                        </div>
-                        <div class="valor-desc">
-                            Ejecutamos con calidad y precisión, cumpliendo los más altos estándares y garantizando resultados duraderos.
-                        </div>
-                    </div>
-                    <div class="valor-menu">
-                        <div class="valor-header">
-                            <span class="valor-icon"><img src="images/icon_remodelacion.png" alt="Remodelación"></span>
-                            <span class="valor-title">Remodelación</span>
-                            <span class="valor-arrow">&#9660;</span>
-                        </div>
-                        <div class="valor-desc">
-                            Transformamos espacios existentes, aportando valor, funcionalidad y modernidad a cada proyecto.
-                        </div>
-                    </div>
-                    <div class="valor-menu">
-                        <div class="valor-header">
-                            <span class="valor-icon"><img src="images/toychiquito.jpg" alt="Compromiso"></span>
-                            <span class="valor-title">Compromiso</span>
-                            <span class="valor-arrow">&#9660;</span>
-                        </div>
-                        <div class="valor-desc">
-                            Nos dedicamos con pasión y responsabilidad, cumpliendo siempre con nuestros clientes y la sociedad.
-                        </div>
+            <div class="valores-list">
+                <div class="valor-row">
+                    <div class="valor-icon"><img src="images/icon_planificacion.png" alt="Planificación" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
+                    <div class="valor-content">
+                        <div class="valor-title">Planificación</div>
+                        <div class="valor-desc">Estructuramos cada proyecto con una hoja de ruta clara y eficiente, anticipando riesgos y optimizando recursos.</div>
                     </div>
                 </div>
-                <div class="valores-img-container">
-                    <img id="valores-img" src="images/planificacion.png" alt="Valor" />
+                <div class="valor-row reverse">
+                    <div class="valor-icon"><img src="images/icon_disenio.webp" alt="Diseño" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
+                    <div class="valor-content">
+                        <div class="valor-title">Diseño</div>
+                        <div class="valor-desc">Creamos soluciones innovadoras y funcionales, cuidando la estética y la viabilidad técnica de cada obra.</div>
+                    </div>
+                </div>
+                <div class="valor-row">
+                    <div class="valor-icon"><img src="images/icon_construccion.png" alt="Construcción" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
+                    <div class="valor-content">
+                        <div class="valor-title">Construcción</div>
+                        <div class="valor-desc">Ejecutamos con calidad y precisión, cumpliendo los más altos estándares y garantizando resultados duraderos.</div>
+                    </div>
+                </div>
+                <div class="valor-row reverse">
+                    <div class="valor-icon"><img src="images/icon_remodelacion.png" alt="Remodelación" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
+                    <div class="valor-content">
+                        <div class="valor-title">Remodelación</div>
+                        <div class="valor-desc">Transformamos espacios existentes, aportando valor, funcionalidad y modernidad a cada proyecto.</div>
+                    </div>
+                </div>
+                <div class="valor-row">
+                    <div class="valor-icon"><img src="images/toychiquito.jpg" alt="Compromiso" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
+                    <div class="valor-content">
+                        <div class="valor-title">Compromiso</div>
+                        <div class="valor-desc">Nos dedicamos con pasión y responsabilidad, cumpliendo siempre con nuestros clientes y la sociedad.</div>
+                    </div>
                 </div>
             </div>
         </section>
