trabajando en seccion objetivo, valores, etc

--- a/index.html
+++ b/index.html
@@ -132,13 +132,14 @@
         <!-- Sección Nuestro Objetivo -->
         <section class="objetivo-section">
             <h2 class="objetivo-title">Nuestro Objetivo</h2>
+            <div class="objetivo-divisor"></div>
             <div class="objetivo-container objetivo-dos-columnas">
                 <div class="objetivo-box mision">
                     <h3>Mision</h3>
                     <p>Brindar servicios de ingeniería, arquitectura y construcción de infraestructura que se distingan por su calidad, puntualidad y eficiencia. Nos comprometemos a enfrentar cada proyecto con profesionalismo, respeto a los plazos y los costos establecidos, siempre ofreciendo soluciones innovadoras que respondan a las necesidades y desafíos de nuestros clientes, garantizando su satisfacción y contribuyendo al progreso y bienestar de las comunidades a las que servimos.
                     </p>
                 </div>
-                <div class="objetivo-divisor"></div>
+                
                 <div class="objetivo-box vision">
                     <h3>Visión</h3>
                     <p>Ser una empresa constructora de referencia a nivel nacional e internacional, reconocida por su compromiso con la calidad, la innovación y la sostenibilidad. Aspiramos a transformar infraestructuras que mejoren la vida de las personas, contribuyendo al progreso social y económico, mediante procesos eficientes, tecnología de vanguardia y un equipo humano altamente calificado y comprometido con la excelencia.</p>
@@ -151,42 +152,14 @@
 
         <!-- Sección Nuestros Valores -->
         <section class="valores-section">
-            <h2 class="valores-title">Nuestros valores</h2>
-            <div class="valores-list">
-                <div class="valor-row">
-                    <div class="valor-icon"><img src="images/icon_planificacion.png" alt="Planificación" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
-                    <div class="valor-content">
-                        <div class="valor-title">Planificación</div>
-                        <div class="valor-desc">Estructuramos cada proyecto con una hoja de ruta clara y eficiente, anticipando riesgos y optimizando recursos.</div>
-                    </div>
-                </div>
-                <div class="valor-row reverse">
-                    <div class="valor-icon"><img src="images/icon_disenio.webp" alt="Diseño" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
-                    <div class="valor-content">
-                        <div class="valor-title">Diseño</div>
-                        <div class="valor-desc">Creamos soluciones innovadoras y funcionales, cuidando la estética y la viabilidad técnica de cada obra.</div>
-                    </div>
-                </div>
-                <div class="valor-row">
-                    <div class="valor-icon"><img src="images/icon_construccion.png" alt="Construcción" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
-                    <div class="valor-content">
-                        <div class="valor-title">Construcción</div>
-                        <div class="valor-desc">Ejecutamos con calidad y precisión, cumpliendo los más altos estándares y garantizando resultados duraderos.</div>
-                    </div>
-                </div>
-                <div class="valor-row reverse">
-                    <div class="valor-icon"><img src="images/icon_remodelacion.png" alt="Remodelación" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
-                    <div class="valor-content">
-                        <div class="valor-title">Remodelación</div>
-                        <div class="valor-desc">Transformamos espacios existentes, aportando valor, funcionalidad y modernidad a cada proyecto.</div>
-                    </div>
-                </div>
-                <div class="valor-row">
-                    <div class="valor-icon"><img src="images/toychiquito.jpg" alt="Compromiso" style="width:100%;height:100%;object-fit:cover;border-radius:50%;"></div>
-                    <div class="valor-content">
-                        <div class="valor-title">Compromiso</div>
-                        <div class="valor-desc">Nos dedicamos con pasión y responsabilidad, cumpliendo siempre con nuestros clientes y la sociedad.</div>
-                    </div>
+            <div class="container">
+                <h2 class="section-title">Nuestros Valores</h2>
+                <div class="valores-chips-grid">
+                    <div class="valor-chip" data-desc="Estructuramos cada proyecto con una hoja de ruta clara y eficiente, anticipando riesgos y optimizando recursos.">Planificación</div>
+                    <div class="valor-chip" data-desc="Creamos soluciones innovadoras y funcionales, cuidando la estética y la viabilidad técnica de cada obra.">Diseño</div>
+                    <div class="valor-chip" data-desc="Ejecutamos con calidad y precisión, cumpliendo los más altos estándares y garantizando resultados duraderos.">Construcción</div>
+                    <div class="valor-chip" data-desc="Transformamos espacios existentes, aportando valor, funcionalidad y modernidad a cada proyecto.">Remodelación</div>
+                    <div class="valor-chip" data-desc="Nos dedicamos con pasión y responsabilidad, cumpliendo siempre con nuestros clientes y la sociedad.">Compromiso</div>
                 </div>
             </div>
         </section>
@@ -276,3 +249,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<!--Falta arreglar seccion valores, ademas de seccion por que elegirnos, y terminar lo ultimo-->
