--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
             <div class="about-text">
                 <h2>Quienes somos?</h2>
                 <h3 class="about-subtitle">Nuestro Compromiso</h3>
-                <p>Somos una empresa en expansion, dedicada a la construccion de obras de ingenieria civil, tanto en el sector publico como en el privado, nuestro mayor fuerte son la construccion de carreteras y puentes, nos caracterizamos por brindar a jóvenes ingenieros residentes que buscan encontrar su primera oportunidad laboral, para formar su camino hacia la excelencia profesional</p>
+                <p>
+                    Somos una empresa en expansión, dedicada a la <strong>construcción de obras de ingeniería civil</strong>, tanto en el sector público como en el privado. Nuestro mayor fuerte son la <strong>construcción de carreteras y puentes</strong>. Nos caracterizamos por brindar <strong>oportunidades a jóvenes ingenieros residentes</strong> que buscan su primera experiencia laboral, para formar su camino hacia la excelencia profesional.
+                </p>
             </div>
             <div class="about-image">
                 <img src="images/equipo.jpg" alt="Sobre nosotros" />
@@ -199,7 +201,7 @@
                         <div class="contacto-icon contacto-icon-ubicacion"></div>
                         <div>
                             <strong>Ubicacion:</strong><br>
-                            9 Calle Poniente casa 57, Santa Tecla,<br>La Libertad
+                            AV. CHAPULTEPEC, EDIF.1385, 3A PISO. PRIVADAS DEL PEDREGAL, SAN LUIS POTOSI
                         </div>
                     </div>
                     <div class="contacto-info-item">
@@ -251,9 +253,8 @@
             <div class="footer-section">
                 <h4 class="footer-title">Ubicación</h4>
                 <p class="footer-address">
-                    9 Calle Poniente casa 57<br>
-                    Santa Tecla, La Libertad<br>
-                    El Salvador
+                    AV. CHAPULTEPEC, EDIF.1385, 3A PISO. <br>
+                    PRIVADAS DEL PEDREGAL, SAN LUIS POTOSI
                 </p>
             </div>
             
